# roster

./: Jones_2019.xlsx  README.md  pyproject.toml  requirements.txt  run_tests.sh  setup.bat  setup.cfg  setup.py  setup.sh
data/: .~lock.Jones_2019.xlsx#
roster/: .roster.py.kate-swp  roster.py
roster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: .coverage  test_roster.py
