[metadata]
name = roster
version = 0.1.0
author = Emanuele Cannizzaro
description = This is a roster project
long_description = This is a roster project
url = https://github.com/EmanueleCannizzaro/roster
keywords = roster

[options]
install_requires =
    pandas
    importlib-metadata; python_version > "3.5"

[options.extras_require]
test =
    pytest
    coverage

[options.package_data]
sample =
    data/Jones_2019.xlsx
